# servingbot

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  ZEDCMD.md  frames.gv  package.xml  readme.md  rtabmapping.sh  yolo명령어.md
dae/: Table.dae
db/: asdf.sh  readme.md
documents/: SIMULATION.md  YOLO.md  ZEDCMD.md  api_doc.md  dwa_movebase_package_documents.md  rplidar_issue.md  serviceWeUse.txt  topicsWeUse.txt
interface/: readme.md
launch/: .nav_change.launch.swp  .turtlebot3_house.launch.swp  amcl.launch  amcl_ChangeClass.launch  amcl_v1.launch  bringupcore_rplidar.launch  cam_recorder.launch  empty_world.launch  gazebo_change_world.launch  gazebo_change_world_no_gui.launch  gazebo_change_world_v1.launch  gazebo_empty_world.launch  gmapping.launch  hectormapping.launch  house.launch  mapping_default.launch  move_base.launch  nav.launch  nav_change.launch  nav_gazebo.launch  nav_harmony.launch  nav_no_rviz.launch  nav_v1.launch  rplidar_ChangeClass.launch  rplidar_inverted.launch  rtabmap_ssd.launch  testWorld.launch  yolo_v3_tiny.launch  zed.launch  zed_camera.launch  zed_camera_nodelet.launch  zed_display_rviz_only.launch  zed_laserscan_gmapping.launch  zed_nodelet_laserscan.launch  zed_rtabmap.launch  zed_rtabmap_only.launch  zed_rtabmap_ssd.launch
maps/: 835_638map-final.pgm  875_638map-final.pgm  876_632_binary (사본).pgm  ChangeClass.pgm  ChangeClass.yaml  HarmonyClass.yaml  MDS_map.pgm  binary_835_638.pgm  changeClassMap.yaml  changeClassMap.yaml.bak  changeClassMap_grid.pgm  changeClassMap_grid.yaml  changeClassMap_octo.pgm  changeClassMap_octo.yaml  changeClassMap_resize_v2.pgm  changeClassMap_resize_v3.pgm  changeClassMap_resize_v4.pgm  changeClassMap_rev.pgm  changeClassMap_rev2.pgm  changeclass_1024.pgm  changeclass_1024.yaml  changeclasswithdesktop1-105-renewed-desktop.pgm  changeclasswithdesktop1-105.pgm  changeclasswithdesktop1-105.xcf  changeclasswithdesktop1.pgm  corridor2.yaml  corridor2_rev.pgm  corridor3.yaml  ddddd2.pgm  ddddd2.yaml  harmonyzed2d.pgm  harmonyzed2d.yaml  map-final.pgm  map.yaml  mapp.pgm  restRoom.pgm  restRoom.yaml
param/: local_costmap_params.yaml.bak2
params/: costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params (copy).yaml  local_costmap_params.yaml
rviz/: gmapping.rviz  turtlebot3_navigation.rviz
script/: CamRecord.py  batteryShow.py  get_boundingbox.py  lidarShow.py  lidarShow2.py  projMapSave.sh  rtabmapping.sh  testCmdLine.py  wallfollow.py  wallfollow_rplidar.py  zedLaserScanShow.py  zed_image_view.py
server/: actionclient.py  goal_api.py  server.py  server_origin.py  table_no.json
src/: depth_subscribe.cpp  zed_wrapper_node.cpp
svo/: make_rtabmap_by_svo.sh
(+128 files in other folders)
